Add comentarios em PecasController.js, adicionado models/controller de Equipamentos
